libs/pavex_macros/tests/prebuilt/fail/unreachable_pub.rs
mod private {
    use pavex_macros::prebuilt;

    #[prebuilt]
    pub struct A;

    #[prebuilt]
    pub enum A1 {}
}

fn main() {}
