libs/pavex_macros/tests/prebuilt/fail/unreachable_pub.stderr
error: unreachable `pub` item
 --> tests/prebuilt/fail/unreachable_pub.rs:5:5
  |
5 |     pub struct A;
  |     ---^^^^^^^^^
  |     |
  |     help: consider restricting its visibility: `pub(crate)`
  |
  = help: or consider exporting it for use by other crates
note: the lint level is defined here
 --> tests/prebuilt/fail/unreachable_pub.rs:4:5
  |
4 |     #[prebuilt]
  |     ^^^^^^^^^^^
  = note: this error originates in the attribute macro `prebuilt` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unreachable `pub` item
 --> tests/prebuilt/fail/unreachable_pub.rs:8:5
  |
8 |     pub enum A1 {}
  |     ---^^^^^^^^
  |     |
  |     help: consider restricting its visibility: `pub(crate)`
  |
  = help: or consider exporting it for use by other crates
note: the lint level is defined here
 --> tests/prebuilt/fail/unreachable_pub.rs:7:5
  |
7 |     #[prebuilt]
  |     ^^^^^^^^^^^
  = note: this error originates in the attribute macro `prebuilt` (in Nightly builds, run with -Z macro-backtrace for more info)
